# speedread

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TODO.md  audio.md  pyproject.toml
speedread/: __init__.py  batch_text_to_speech.py  compile_summaries.py  create_audiobook.py  epub2json.py  epub2txt.py  epub_metadata.py  speedread_cli.py  summarize_book.py  text_to_speech.py  trim_chapters.py  utils.py
templates/: book_summary.html
